--- a/templates/oauth/spotify_login.html
+++ b/templates/oauth/spotify_login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Title</title>
-    <meta name="google-signin-client_id"
-          content="672316098126-qn9h2dltnc5urbjg0tv1666l5s2k0h52.apps.googleusercontent.com">
 </head>
 <body>
-<div id="my-signin"></div>
+<a href="https://accounts.spotify.com/authorize?client_id=62ef3292002a46c08dfa27098245a5c2&
+response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A8000%2Fspotify-callback
+&scope=user-read-private%20user-read-email&state=34fFs29kd08">Spotify login</a>
 
 
 </body>
